# Game-of-Life

./: CMakeLists.txt
src/: cell-data.c  cell-data.h  cpu-frame-computer.c  cpu-frame-computer.h  cuda.cu  cuda.h  game.c  game.h  generator.c  gpu-frame-computer.cu  gpu-frame-computer.h  main.c  timing.c  timing.h
test-data/: 1024.gol  128.gol  256.gol  32.gol  512.gol  64.gol  gosper-glider-gun.gol  pulsar.gol  r-pentomino.gol
